--- a/.github/workflows/usuario-service.yml
+++ b/.github/workflows/usuario-service.yml
@@ -8,6 +8,7 @@ on:
   pull_request:
     paths:
       - 'Microservices/usuario-service/**'
+  workflow_dispatch:  # Adicione para trigger manual
 
 jobs:
   build-and-test:
@@ -22,18 +23,38 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '17'
+          cache: 'maven'  # Cache automático do Maven
+
+      - name: Verify mvnw
+        working-directory: ./Microservices/usuario-service
+        run: |
+          if [ -f "mvnw" ]; then
+            echo "✅ mvnw encontrado, dando permissão..."
+            chmod +x mvnw
+            ./mvnw --version
+          else
+            echo "ℹ️ mvnw não encontrado, usando mvn do sistema..."
+            mvn --version
+          fi
 
       - name: Build and Test
         working-directory: ./Microservices/usuario-service
-        run: ./mvnw clean package -DskipTests
+        run: |
+          if [ -f "mvnw" ]; then
+            ./mvnw clean package -DskipTests
+          else
+            mvn clean package -DskipTests
+          fi
 
       - name: Login to Docker Hub
+        if: success()
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and Push Docker Image
+        if: success()
         uses: docker/build-push-action@v5
         with:
           context: ./Microservices/usuario-service
@@ -47,7 +68,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build-and-test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && success()
     
     steps:
       - name: Deploy to EC2
@@ -59,38 +80,13 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             echo "🚀 Starting deployment..."
-            
-            # Ir para diretório do projeto
             cd ~/ecommerce-microservices
-            
-            # Pull da nova imagem
-            echo "📦 Pulling latest image..."
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
-            
-            # Parar e remover container antigo
-            echo "🛑 Stopping old container..."
             docker stop usuario-service || true
             docker rm usuario-service || true
-            
-            # Iniciar novo container
-            echo "🚀 Starting new container..."
             docker-compose -f docker-compose.usuario.yml up -d
-            
-            # Limpar recursos não utilizados
-            echo "🧹 Cleaning up..."
             docker image prune -f
-            
-            # Verificar status
             echo "✅ Deployment complete!"
-            echo "📊 Container status:"
-            docker ps --filter "name=usuario-service" --format "table {{.Names}}\t{{.Status}}\t{{.Ports}}"
-            
-            # Health check
-            echo "🏥 Performing health check..."
+            docker ps --filter "name=usuario-service"
             sleep 15
-            if curl -s -f http://localhost:8083/actuator/health > /dev/null; then
-              echo "💚 Service is healthy!"
-            else
-              echo "⚠️ Service might be starting..."
-              docker logs usuario-service --tail 20
-            fi
+            curl -f http://localhost:8083/actuator/health || echo "⚠️ Health check falhou, verifique logs"
