--- a/.github/workflows/usuario-service.yml
+++ b/.github/workflows/usuario-service.yml
@@ -5,56 +5,44 @@ on:
     branches: [ main ]
     paths:
       - 'Microservices/usuario-service/**'
-  pull_request:
-    paths:
-      - 'Microservices/usuario-service/**'
-  workflow_dispatch:  # Adicione para trigger manual
+  workflow_dispatch:
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Java
+      - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
-          cache: 'maven'  # Cache automático do Maven
 
-      - name: Verify mvnw
+      - name: Build with FORCED Java 17
         working-directory: ./Microservices/usuario-service
         run: |
-          if [ -f "mvnw" ]; then
-            echo "✅ mvnw encontrado, dando permissão..."
-            chmod +x mvnw
-            ./mvnw --version
-          else
-            echo "ℹ️ mvnw não encontrado, usando mvn do sistema..."
-            mvn --version
-          fi
-
-      - name: Build and Test
-        working-directory: ./Microservices/usuario-service
-        run: |
-          if [ -f "mvnw" ]; then
-            ./mvnw clean package -DskipTests
-          else
-            mvn clean package -DskipTests
-          fi
+          # Remove Maven wrapper (pode estar configurado para Java 21)
+          rm -f mvnw mvnw.cmd
+          
+          # Build com flags EXPLÍCITAS para Java 17
+          mvn clean package -DskipTests \
+            -Djava.version=17 \
+            -Dmaven.compiler.source=17 \
+            -Dmaven.compiler.target=17 \
+            -Dmaven.compiler.release=17 \
+            -Dmaven.compiler.fork=true \
+            -Dmaven.compiler.executable=/usr/lib/jvm/temurin-17-jdk-amd64/bin/javac
 
       - name: Login to Docker Hub
-        if: success()
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Push Docker Image
-        if: success()
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./Microservices/usuario-service
@@ -62,13 +50,11 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && success()
+    needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     steps:
       - name: Deploy to EC2
@@ -79,14 +65,10 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            echo "🚀 Starting deployment..."
             cd ~/ecommerce-microservices
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
             docker stop usuario-service || true
             docker rm usuario-service || true
             docker-compose -f docker-compose.usuario.yml up -d
-            docker image prune -f
-            echo "✅ Deployment complete!"
+            echo "✅ Deployed!"
             docker ps --filter "name=usuario-service"
-            sleep 15
-            curl -f http://localhost:8083/actuator/health || echo "⚠️ Health check falhou, verifique logs"
