--- a/.github/workflows/usuario-service.yml
+++ b/.github/workflows/usuario-service.yml
@@ -1,74 +1,17 @@
-name: CI/CD - Usuario Service
+name: Simple Build
 
 on:
   push:
-    branches: [ main ]
-    paths:
-      - 'Microservices/usuario-service/**'
-  workflow_dispatch:
+    branches: [main]
+    paths: ['Microservices/usuario-service/**']
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Java 17
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
-
-      - name: Build with FORCED Java 17
-        working-directory: ./Microservices/usuario-service
-        run: |
-          # Remove Maven wrapper (pode estar configurado para Java 21)
-          rm -f mvnw mvnw.cmd
-          
-          # Build com flags EXPLÍCITAS para Java 17
-          mvn clean package -DskipTests \
-            -Djava.version=17 \
-            -Dmaven.compiler.source=17 \
-            -Dmaven.compiler.target=17 \
-            -Dmaven.compiler.release=17 \
-            -Dmaven.compiler.fork=true \
-            -Dmaven.compiler.executable=/usr/lib/jvm/temurin-17-jdk-amd64/bin/javac
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./Microservices/usuario-service
-          push: true
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:${{ github.sha }}
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    
-    steps:
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          port: ${{ secrets.EC2_SSH_PORT }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            cd ~/ecommerce-microservices
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
-            docker stop usuario-service || true
-            docker rm usuario-service || true
-            docker-compose -f docker-compose.usuario.yml up -d
-            echo "✅ Deployed!"
-            docker ps --filter "name=usuario-service"
+      - run: cd Microservices/usuario-service && mvn clean compile -DskipTests
