--- a/.github/workflows/usuario-service.yml
+++ b/.github/workflows/usuario-service.yml
@@ -1,17 +1,83 @@
-name: Simple Build
+
+name: CI/CD - Usuario Service
 
 on:
   push:
-    branches: [main]
-    paths: ['Microservices/usuario-service/**']
+    branches: [ main ]
+    paths:
+      - 'Microservices/usuario-service/**'
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-java@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
-      - run: cd Microservices/usuario-service && mvn clean compile -DskipTests
+
+      - name: Remove Maven wrapper if exists
+        working-directory: ./Microservices/usuario-service
+        run: |
+          rm -f mvnw mvnw.cmd 2>/dev/null || true
+          rm -rf .mvn/ 2>/dev/null || true
+
+      - name: Build with Maven
+        working-directory: ./Microservices/usuario-service
+        run: |
+          echo "Java version:"
+          java -version
+          echo ""
+          echo "Maven version:"
+          mvn --version
+          echo ""
+          echo "Building..."
+          mvn clean compile -DskipTests
+
+      - name: Package
+        working-directory: ./Microservices/usuario-service
+        run: |
+          mvn clean package -DskipTests
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./Microservices/usuario-service
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:${{ github.sha }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    
+    steps:
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          port: ${{ secrets.EC2_SSH_PORT }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            cd ~/ecommerce-microservices
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
+            docker stop usuario-service || true
+            docker rm usuario-service || true
+            docker-compose -f docker-compose.usuario.yml up -d
+            echo "✅ Deployed!"
+            docker ps --filter "name=usuario-service"
