--- a/.github/workflows/usuario-service.yml
+++ b/.github/workflows/usuario-service.yml
@@ -55,7 +55,7 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     steps:
-      - name: Deploy with Cleanup
+      - name: Deploy to EC2 (Simple Docker Run)
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -63,9 +63,9 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            echo "🧹 Cleaning EC2 before deploy..."
+            echo "🚀 Deploying with docker run (safe)..."
             
-            # Stop and remove container if exists
+            # Cleanup
             docker stop usuario-service 2>/dev/null || true
             docker rm usuario-service 2>/dev/null || true
             
@@ -74,13 +74,21 @@ jobs:
               docker rmi -f "\$img" 2>/dev/null || true
             done
             
-            echo "🚀 Pulling new image..."
+            # Pull new image
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
             
-            echo "🔄 Starting fresh container..."
-            cd ~/ecommerce-microservices
-            docker-compose -f docker-compose.usuario.yml up -d
+            # Run new container (SIMPLE - no docker-compose)
+            docker run -d \
+              --name usuario-service \
+              -p 8083:8080 \
+              -e SPRING_PROFILES_ACTIVE=docker \
+              -e TZ=America/Sao_Paulo \
+              ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
             
-            echo "✅ DEPLOYED FRESH!"
-            echo "Java version in container:"
-            docker exec usuario-service java -version
+            echo "✅ Deployed!"
+            echo ""
+            echo "📊 Container status:"
+            docker ps --filter "name=usuario-service" --format "table {{.Names}}\t{{.Status}}\t{{.Ports}}"
+            echo ""
+            echo "🐳 Java version in container:"
+            docker exec usuario-service java -version 2>&1 | head -3
