--- a/.github/workflows/usuario-service.yml
+++ b/.github/workflows/usuario-service.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  test-build:
     runs-on: ubuntu-latest
     
     steps:
@@ -21,17 +21,46 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Clean workspace
+      - name: Debug Info
         run: |
-          # Limpa Maven cache
-          rm -rf ~/.m2/repository/
-          # Limpa projetos
-          find . -name "target" -type d -exec rm -rf {} + 2>/dev/null || true
+          echo "=== JAVA VERSION ==="
+          java -version
+          echo ""
+          echo "=== POM.XML ==="
+          cat Microservices/usuario-service/pom.xml | grep -E "java.version|parent"
+          echo ""
+          echo "=== COMPILING... ==="
+
+      - name: Simple Compile Test
+        working-directory: ./Microservices/usuario-service
+        run: |
+          # Teste SIMPLES de compilação
+          mvn clean compile -DskipTests \
+            -Djava.version=17 \
+            -Dmaven.compiler.source=17 \
+            -Dmaven.compiler.target=17
+
+  build:
+    runs-on: ubuntu-latest
+    needs: test-build
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Java 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
       - name: Build
         working-directory: ./Microservices/usuario-service
         run: |
-          mvn clean package -DskipTests -U -B
+          mvn clean package -DskipTests \
+            -Djava.version=17 \
+            -Dmaven.compiler.source=17 \
+            -Dmaven.compiler.target=17
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -39,7 +68,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and Push Docker Image (NO-CACHE)
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
           context: ./Microservices/usuario-service
@@ -47,7 +76,6 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
             ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:${{ github.sha }}
-          no-cache: true
 
   deploy:
     runs-on: ubuntu-latest
@@ -55,7 +83,7 @@ jobs:
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     
     steps:
-      - name: Deploy to EC2 (Simple Docker Run)
+      - name: Deploy to EC2
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -63,32 +91,8 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            echo "🚀 Deploying with docker run (safe)..."
-            
-            # Cleanup
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
             docker stop usuario-service 2>/dev/null || true
             docker rm usuario-service 2>/dev/null || true
-            
-            # Remove old images
-            docker images --format "{{.Repository}}:{{.Tag}}" | grep usuario | while read img; do
-              docker rmi -f "\$img" 2>/dev/null || true
-            done
-            
-            # Pull new image
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
-            
-            # Run new container (SIMPLE - no docker-compose)
-            docker run -d \
-              --name usuario-service \
-              -p 8083:8080 \
-              -e SPRING_PROFILES_ACTIVE=docker \
-              -e TZ=America/Sao_Paulo \
-              ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
-            
+            docker run -d --name usuario-service -p 8083:8080 -e SPRING_PROFILES_ACTIVE=docker ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
             echo "✅ Deployed!"
-            echo ""
-            echo "📊 Container status:"
-            docker ps --filter "name=usuario-service" --format "table {{.Names}}\t{{.Status}}\t{{.Ports}}"
-            echo ""
-            echo "🐳 Java version in container:"
-            docker exec usuario-service java -version 2>&1 | head -3
