--- a/.github/workflows/usuario-service.yml
+++ b/.github/workflows/usuario-service.yml
@@ -8,41 +8,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  test-build:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Java 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Debug Info
-        run: |
-          echo "=== JAVA VERSION ==="
-          java -version
-          echo ""
-          echo "=== POM.XML ==="
-          cat Microservices/usuario-service/pom.xml | grep -E "java.version|parent"
-          echo ""
-          echo "=== COMPILING... ==="
-
-      - name: Simple Compile Test
-        working-directory: ./Microservices/usuario-service
-        run: |
-          # Teste SIMPLES de compilação
-          mvn clean compile -DskipTests \
-            -Djava.version=17 \
-            -Dmaven.compiler.source=17 \
-            -Dmaven.compiler.target=17
-
   build:
     runs-on: ubuntu-latest
-    needs: test-build
     
     steps:
       - name: Checkout
@@ -56,11 +23,7 @@ jobs:
 
       - name: Build
         working-directory: ./Microservices/usuario-service
-        run: |
-          mvn clean package -DskipTests \
-            -Djava.version=17 \
-            -Dmaven.compiler.source=17 \
-            -Dmaven.compiler.target=17
+        run: mvn clean package -DskipTests
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -96,3 +59,4 @@ jobs:
             docker rm usuario-service 2>/dev/null || true
             docker run -d --name usuario-service -p 8083:8080 -e SPRING_PROFILES_ACTIVE=docker ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
             echo "✅ Deployed!"
+            docker ps --filter "name=usuario-service"
