--- a/Microservices/usuario-service/pom.xml
+++ b/Microservices/usuario-service/pom.xml
@@ -15,12 +15,13 @@
 	<description>serviço de usuários</description>
 	
 	<properties>
-		<java.version>17</java.version> 
-		
+		<java.version>17</java.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+		<maven.compiler.release>17</maven.compiler.release>
 	</properties>
 	
 	<dependencies>
-		<!-- Dependências CORRETAS: -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -59,6 +60,20 @@
 
 	<build>
 		<plugins>
+			<!-- PLUGIN CRÍTICO: Força Java 17 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version> <!-- Versão que funciona com Java 17 -->
+				<configuration>
+					<source>17</source>
+					<target>17</target>
+					<release>17</release>
+					<fork>true</fork>
+					<verbose>true</verbose>
+				</configuration>
+			</plugin>
+			
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
