--- a/.github/workflows/usuario-service.yml
+++ b/.github/workflows/usuario-service.yml
@@ -37,8 +37,8 @@ jobs:
           context: ./Microservices/usuario-service
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:${{ github.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/usuario-service:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/usuario-service:${{ github.sha }}
 
   deploy:
     runs-on: ubuntu-latest
@@ -54,7 +54,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
+            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/usuario-service:latest
             docker stop usuario-service 2>/dev/null || true
             docker rm usuario-service 2>/dev/null || true
             docker run -d --name usuario-service -p 8083:8080 -e SPRING_PROFILES_ACTIVE=docker ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
