--- a/.github/workflows/usuario-service.yml
+++ b/.github/workflows/usuario-service.yml
@@ -43,7 +43,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main'
+
     
     steps:
       - name: Deploy to EC2
@@ -57,6 +58,6 @@ jobs:
             docker pull ${{ secrets.DOCKERHUB_USERNAME }}/usuario-service:latest
             docker stop usuario-service 2>/dev/null || true
             docker rm usuario-service 2>/dev/null || true
-            docker run -d --name usuario-service -p 8083:8080 -e SPRING_PROFILES_ACTIVE=docker ${{ secrets.DOCKERHUB_USERNAME }}/usuarios-service:latest
+            docker run -d --name usuario-service -p 8083:8080 -e SPRING_PROFILES_ACTIVE=docker ${{ secrets.DOCKERHUB_USERNAME }}/usuario-service:latest
             echo "✅ Deployed!"
             docker ps --filter "name=usuario-service"
