--- a/.github/workflows/usuario-service.yml
+++ b/.github/workflows/usuario-service.yml
@@ -44,7 +44,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    if: needs.build.result == 'success'
+    if: needs.build.result == 'successs'
 
     
     steps:
